--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@
   --special-green: #91C92F;
   --background-input-form: #F2F2F2;
   --background-input-form-hover: #EAEAEA;
-  --background-invalid-value: #F6DADA;
   --filter-title-grey: #DCDCDC;
+  --filter-range: #C4C4C4;
   --pagination-grey: #EBEBEB;
   --pagination-button: #D9D9D9;
   --shadow: rgba(0, 0, 0, 0.15);
   --button-text-opacity-3: rgba(0, 0, 0, 0.3);
   --button-text-opacity-4: rgba(0, 0, 0, 0.4);
+
   --buttons-yellow-dark: #F0C52E;
   --svg-navigation-icons: #FFC600;
   --background-yellow: #F7E296;
@@ -81,10 +82,6 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-.display-none {
-  display: none;
 }
 
 /* Container */
@@ -147,10 +144,11 @@ img {
 /* Header-first-level */
 
 .header-first-level {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  margin: 23px 60px 50px;
+  margin: 23px 60px 51px;
 }
 
 .search-button {
@@ -159,18 +157,11 @@ img {
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 300;
   color: var(--basic-black);
+  background-color: transparent;
   font-size: 15px;
   line-height: 20px;
-
-  outline: 5px solid rgba(255, 0, 255, 0.3);
-  outline-offset: -5px;
-
-  max-width: 440px;
 }
 
-.search-button button {
-  text-transform: uppercase;
-}
 
 .search-button::before {
   position: absolute;
@@ -185,6 +176,62 @@ img {
   background-position: 0 0;
   background-size: 100%;
 }
+
+.search-button input {
+  background-color: transparent;
+  border: none;
+  opacity: 0.3;
+}
+
+.search-button input:hover,
+.search-button input:focus {
+  opacity: 0.6;
+}
+
+.search-wrapper {
+  position: relative;
+  width: 440px;
+}
+
+.search-wrapper::before {
+  display: none;
+  position: absolute;
+  content: "";
+  right: 0;
+  bottom: -13px;
+  width: 440px;
+  height: 2px;
+  background-color: var(--basic-black);
+}
+
+.search-button button {
+  display: none;
+  position: absolute;
+  padding: 15px;
+  bottom: -13px;
+  right: 0;
+  border: 2px solid var(--basic-black);
+  background-color: transparent;
+  text-transform: uppercase;
+}
+
+.search-button:focus button,
+.search-button:active button,
+.search-wrapper:focus::before,
+.search-wrapper:active::before {
+  display: block;
+}
+
+.search-button button:hover,
+.search-button button:focus {
+  color: var(--basic-white);
+  background-color: var(--basic-black);
+}
+
+.search-button button:active {
+  color: var(--button-text-opacity-3);
+}
+
 
 .login-link {
   position: relative;
@@ -409,21 +456,29 @@ img {
 }
 
 .header-catalog-list {
-  /*display: flex;*/
+  display: none;
   flex-wrap: wrap;
   justify-content: flex-start;
   position: absolute;
   list-style: none;
   top: 51px;
-  left: 0;
-  max-width: 100%;
-  padding: 0;
+  left: -60px;
+  width: 1160px;
   margin: 0;
-  padding-bottom: 28px;
+  padding: 0 60px 30px;
   z-index: 1;
   background-color: var(--background-yellow);
-  display: none;
+
 }
+
+.catalog-menu-item {
+  padding-bottom: 40px;
+}
+
+.catalog-menu-item:focus-within .header-catalog-list {
+  display: flex;
+}
+
 
 .header-catalog-list li {
   margin-bottom: 13px;
@@ -668,7 +723,7 @@ th {
   line-height: 219px;
   text-transform: uppercase;
   right: 10px;
-  top: -51px;
+  top: -52px;
   width: 182px;
   height: 170px;
   color: var(--basic-white);
@@ -930,6 +985,7 @@ th {
   margin: 0;
 }
 
+
 .service-delivery::after {
   position: absolute;
   content: "";
@@ -943,6 +999,10 @@ th {
   background-size: 100%;
 }
 
+.service-warranty{
+  display: none;
+}
+
 .service-warranty::after {
   position: absolute;
   content: "";
@@ -954,6 +1014,10 @@ th {
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: 100%;
+}
+
+.service-credit{
+  display: none;
 }
 
 .service-credit::after {
@@ -995,7 +1059,6 @@ th {
 .brands-img:active {
   filter: grayscale(0);
 }
-
 
 
 /* Information */
@@ -1083,11 +1146,6 @@ th {
   margin-top: 68px;
 }
 
-.write-us button {
-  margin-top: 72px;
-}
-
-
 .write-us {
   width: 560px;
 }
@@ -1104,6 +1162,11 @@ th {
   line-height: 28px;
   text-transform: none;
 }
+
+.popup-link-contacts {
+  margin-top: 82px;
+}
+
 
 /* Button */
 
@@ -1130,6 +1193,12 @@ th {
 .button-wide {
   position: relative;
   width: 260px;
+}
+
+.write-us-button {
+  color: var(--basic-black);
+  padding: 9px 40px;
+  text-decoration: none;
 }
 
 .button-send,
@@ -1162,28 +1231,6 @@ th {
 
 .button:active {
   color: var(--button-text-opacity-3);
-}
-
-/* Button Compare */
-
-.button-compare {
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: 300;
-  font-size: 13px;
-  line-height: 18px;
-  letter-spacing: 0.1em;
-  border: none;
-  opacity: 0.5;
-  background-color: transparent;
-}
-
-.button-compare:hover,
-.button-compare:focus {
-  opacity: 1;
-}
-
-.button-compare:active {
-  opacity: 0.2;
 }
 
 
@@ -1443,7 +1490,6 @@ th {
 }
 
 
-
 /* Hover */
 
 .main-header-logo:hover,
@@ -1548,6 +1594,7 @@ th {
   color: var(--basic-black);
 }
 
+
 .name,
 .email,
 .letter {
@@ -1640,19 +1687,16 @@ th {
   margin-bottom: 41px;
 }
 
-.modal-feedback-item input:hover {
+.modal-feedback-item input:hover,
+.modal-feedback-item textarea:hover {
   background-color: var(--background-input-form-hover);
 }
 
-.modal-feedback-item input:focus {
+.modal-feedback-item input:focus,
+.modal-feedback-item textarea:focus {
   background-color: var(--basic-white);
   outline: 2px solid var(--background-yellow);
 }
-
-
-/*.modal-feedback-item input:invalid:required{
-  background-color: var(--background-invalid-value);
-}*/
 
 
 /* Modal-Map */
@@ -1734,7 +1778,6 @@ th {
   font-weight: 800;
   font-size: 47px;
   line-height: 58px;
-
   margin: 0 0 30px 60px;
   padding: 0;
 }
@@ -1807,8 +1850,6 @@ th {
   display: flex;
   flex-direction: column;
   position: relative;
-  outline: 5px solid rgba(30, 255, 0, 0.7);
-  outline-offset: -5px;
   min-width: 328px;
 }
 
@@ -1828,7 +1869,6 @@ th {
   width: 50vw;
   background-color: var(--filter-title-grey);
 }
-
 
 
 .filter-head-wrapper h2,
@@ -1868,19 +1908,93 @@ th {
 }
 
 
+/* Filter-range */
+
+.filter-item {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.range-filter {
+  width: 200px;
+}
+
+.range-controls {
+  position: relative;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background-color: var(--filter-range);
+}
+
+.range-controls .bar {
+  height: 2px;
+  background: var(--special-green);
+}
+
+
+.range-controls .toggle {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  border: 8px solid var(--basic-white);
+  background-color: var(--filter-range);
+  border-radius: 50%;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.18);
+  cursor: pointer;
+}
+
+.price-controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.max-price {
+  margin-right: 25px;
+}
+
+.price-controls label {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+
+.price-controls input {
+  width: 60px;
+  padding-top: 17px;
+  border: none;
+  background-color: transparent;
+}
+
+
 /* Filter-checkbox */
 
 
 .filter fieldset {
   padding: 0;
   margin: 0;
-  margin-top: 38px;
+  margin-bottom: 38px;
   border: none;
 }
 
 .filter fieldset:first-child {
-  margin-top: 70px;
+  margin-top: 71px;
 }
+
+.filter fieldset:nth-child(2) {
+  margin-bottom: 41px;
+}
+
 
 .filter legend {
   position: relative;
@@ -1889,7 +2003,7 @@ th {
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.1em;
-  padding-top: 17px;
+  padding-top: 15px;
 }
 
 .filter legend::before {
@@ -1931,8 +2045,8 @@ th {
 .filter-input-checkbox+label::before {
   position: absolute;
   content: "";
-  left: -42px;
-  top: -3px;
+  left: -40px;
+  top: -2px;
   width: 24px;
   height: 24px;
   border: 2px solid var(--basic-black);
@@ -1942,8 +2056,8 @@ th {
 .filter-input-checkbox:checked+label::after {
   position: absolute;
   content: "";
-  top: 4px;
-  left: -37px;
+  top: 5px;
+  left: -35px;
   width: 14px;
   height: 11px;
   background-image: url("../img/checked.svg");
@@ -1958,8 +2072,8 @@ th {
 .filter-input-radio+label::before {
   content: "";
   position: absolute;
-  left: -42px;
-  top: -1px;
+  left: -40px;
+  top: -2px;
   width: 24px;
   height: 24px;
   border: 2px solid var(--basic-black);
@@ -1969,8 +2083,8 @@ th {
 .filter-input-radio:checked+label::after {
   content: "";
   position: absolute;
-  top: 7px;
-  left: -34px;
+  top: 6px;
+  left: -32px;
   width: 8px;
   height: 8px;
   background-color: var(--basic-black);
@@ -1980,9 +2094,8 @@ th {
 .button-filter-send {
   position: relative;
   z-index: 1;
-  margin-top: 45px;
+  margin-top: 8px;
   width: 200px;
-  /*padding-right: 11px;*/
 }
 
 
@@ -2004,11 +2117,10 @@ th {
   opacity: 1;
 }
 
-
-/*
-:disabled{
+.filter-input:disabled+label,
+.filter-input-checkbox:checked:disabled+label {
   opacity: 0.25;
-}*/
+}
 
 
 /* Right-Column */
@@ -2095,7 +2207,7 @@ th {
   background-position: 0 0;
   background-size: 100%;
   opacity: 0.2;
-  margin-right: 23px;
+  margin-right: 24px;
   margin-left: 222px;
 }
 
@@ -2124,6 +2236,42 @@ th {
 
 .sort-button-current {
   opacity: 1;
+}
+
+
+/* Item Button */
+
+.item-buttons {
+  display: none;
+  position: absolute;
+  text-align: center;
+  top: 170px;
+  left: -6px;
+  z-index: 3;
+}
+
+.button-cart {
+  margin-bottom: 10px;
+}
+
+.button-compare {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 18px;
+  letter-spacing: 0.1em;
+  border: none;
+  opacity: 0.5;
+  background-color: transparent;
+}
+
+.button-compare:hover,
+.button-compare:focus {
+  opacity: 1;
+}
+
+.button-compare:active {
+  opacity: 0.2;
 }
 
 
@@ -2169,6 +2317,7 @@ th {
   background-color: var(--basic-white);
 }
 
+
 .catalog-item p {
   margin: 0;
 }
@@ -2191,7 +2340,6 @@ th {
   width: 270px;
 }
 
-
 .item-price {
   font-family: "Gilroy", "Arial", sans-serif;
   font-weight: 300;
@@ -2199,6 +2347,20 @@ th {
   line-height: 19px;
   letter-spacing: 0.05em;
   width: 81px;
+}
+
+
+.item-img-wrapper:hover,
+.item-img-wrapper:focus {
+ opacity: 0.7;
+}
+
+.item-img-wrapper:hover+.item-buttons {
+  display: block;
+}
+
+.item-buttons:hover {
+  display: block;
 }
 
 
@@ -2213,6 +2375,7 @@ th {
   height: 62px;
   border: 2px solid var(--button-text-opacity-3);
   border-radius: 50%;
+  z-index: 3;
 }
 
 .catalog-item-new::after {
@@ -2229,6 +2392,7 @@ th {
   align-items: center;
   text-transform: uppercase;
   color: var(--button-text-opacity-3);
+  z-index: 3;
 }
 
 
@@ -2316,4 +2480,70 @@ th {
 .pagination-back a:active,
 .pagination-next a:active {
   opacity: 0.3;
+}
+
+
+.display-none {
+  display: none;
+}
+
+
+/* JS */
+.modal-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.header-catalog-show {
+  display: flex;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
+.catalog-buttons-show {
+  display: block;
+}
+
+/* Animations */
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  70% {
+  transform: translateY(-52%);
+}
+
+90% {
+    transform: translateY(-51%);
+  }
+
+  100% {
+    transform: translateY(-50%);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateY(-50%);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px) translateY(-50%);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px) translateY(-50%)
+  }
 }
